##########################
# Setup.py Configuration #
##########################
[metadata]
name = mpqe-data-cleaning

[options]
install_requires =
    rdflib


# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

test =
    flake8
    mypy
    pytest
    unittest-templates

[options.entry_points]
console_scripts =
    mpqe-clean = mpqe_data_cleaning.create_splits:main

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
# line too long
    E501